# consoleplayer

./: .envrc  .justfile  Cargo.toml  build.rs
.github/workflows/: rust.yml
console-player/: Cargo.toml
console-player-core/: Cargo.toml
console-player-core/src/: discord.rs  error.rs  game.rs  lib.rs
console-player-core/src/discord/: event_handler.rs
console-player-core/src/widgets/: game_widget.rs  mod.rs
console-player/src/daemon/: error.rs  mod.rs  state.rs
src/: app.rs  error.rs  event_handler.rs  game.rs  lib.rs  main.rs  tui.rs
src/app/: input.rs  state.rs
src/config/: mod.rs
src/domain/game/: mod.rs
src/game/: gamefile.rs  gamelist.rs
src/tui/: data.rs  input.rs  state.rs  tabs.rs  widgets.rs
