[package]
name    = "console-player-old"
version = "0.1.0"
edition = "2024"

[dependencies]
discord_game_sdk = "1.0.1"

# env
dotenv = "0.15.0"

# error handling
anyhow     = "1.0.97"
color-eyre = "0.6.3"
thiserror = "2.0.12"

# serde
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

# tui
ratatui = { version = "0.29.0", features = [
    "all-widgets",
    "document-features",
    "macros",
    "serde",
] }
tui-input = { version = "0.12.0", features = ["serde"] }
tui-logger = { version = "0.17.1" }

# logging
log = "0.4.27"
env_logger = "0.11.8"

# tracing
tracing            = "0.1.41"
tracing-journald   = "0.3.1"
tracing-subscriber = "0.3.19"

# quality of life
bon        = "3.5.1"
derive_more = { version = "2.0.1", features = ["full"]}
strum = { version = "0.27.1", features = ["derive"] }
chrono     = "0.4.40"
clap       = { version = "4.5.35", features = ["derive"] }
signal-hook = "0.3.17"

# filesystem
directories = "6.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"