[package]
name = "console-player-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
thiserror.workspace = true
serde.workspace = true
bon.workspace = true
discord_game_sdk.workspace = true
tracing.workspace = true
dotenv.workspace = true
toml.workspace = true

# tui
ratatui.workspace = true
tui-input.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true