[package]
name = "console-player"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "console-player-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "console-player-tui"
path = "src/bin/tui.rs"

[dependencies]
clap.workspace = true

# logging / tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true

# core
console-player-core.workspace = true

# env
dotenv.workspace = true

# error handling
thiserror.workspace = true

# control flow
signal-hook.workspace = true

# file lock
fd-lock.workspace = true